--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "mapbox-gl": "^1.2.1",
     "deck.gl": "^7.2.2",
     "haversine-distance": "^1.1.4",
+    "mapbox-gl": "^1.2.1",
+    "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
-    "react-router-dom": "^5.0.1",
-    "semantic-ui-react": "^0.88.0",
-    "redux": "^4.0.4",
+    "react-map-gl": "^5.0.10",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.3.1"
-  }
-  ,
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.88.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
