--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "haversine-distance": "^1.1.4",
     "mapbox-gl": "^1.2.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-map-gl": "^5.0.10",
     "react-redux": "^7.1.1",
@@ -15,7 +16,8 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.3.1",
-    "semantic-ui-react": "^0.88.0"
+    "semantic-ui-react": "^0.88.0",
+    "viewport-mercator-project": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
