--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "deck.gl": "^7.2.2",
     "haversine-distance": "^1.1.4",
     "mapbox-gl": "^1.2.1",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
