add graph to display speed

--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.8.0",
     "deck.gl": "^7.2.2",
     "haversine-distance": "^1.1.4",
     "mapbox-gl": "^1.2.1",
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.9.0",
     "react-map-gl": "^5.0.10",
     "react-redux": "^7.1.1",
